@@ -21,9 +21,11 @@ NEW FEATURES
 (raf) Core/TextUI: Now the system differientiates between the selected(highlighted) track, and the currently playing track. This is shown using different colors on the TextUI. (r764)
 (sandberg) 3DUI: Background modified to include space for the playtime/total time. (r763)
 (raf) Core: Changed versioning scheme. Hopefully less people will be confused now...
+(raf) TextUI: The folder of the currently playing track is now highlighted. (r766)
 BUG FIXES
 (sandberg) Core/3DUI: Rearranged the order of the VBlank operations to remove some of the jitter on the UI. (r745)
 (sandberg) Core: [ Bug #6256 ] WiFi logging is always enabled (r754)
+(raf) Core: Fixed a bunch of small issues related to pausing/playing/changing tracks both using the buttons and HPRM. The current implementation should be a lot more reliable/intuitive. (r766)
 
 0.38-Pre2 (r744) (2006-01-27)
 NEW FEATURES
